--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <h1>Titulo Nuevo Modificado</h1>
 
     <form action="#" method="get">
+        <textarea></textarea><br>
+        <input type="text" name="firstName" id="firstName">
         <input type="button" value="Enviar">
     </form>
 </body>
