--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <form action="#" method="get">
         <textarea></textarea><br>
         <input type="text" name="firstName" id="firstName">
+        <input type="text" name="LastName" id="LastName">
         <input type="button" value="Enviar">
     </form>
 </body>
